# magic

./: AndroidManifest.xml  pyproject.toml  test.py
src/: main.py
