[project]
name = "magic"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.26.0",
  "yt-dlp==2024.12.13",
  # "pytube==15.0.0",
  "asyncio==3.4.3",
  "pathlib",
  "flet-permission-handler==0.1.0",
  "ffmpeg==1.4",
  "ffprobe==0.5",
]

[tool.flet.android.permission]
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.READ_MEDIA_AUDIO" = true
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_MEDIA_IMAGES" = true

[tool.flet.android]
permissions = [
    "android.permission.INTERNET",
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.MANAGE_EXTERNAL_STORAGE"
]



# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "magic"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.26.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}


assets = [
    { path = "ffmpeg/android/arm64-v8a/ffmpeg", target = "app/src/main/jniLibs/arm64-v8a/libffmpeg.so" },
    { path = "ffmpeg/android/arm64-v8a/ffprobe", target = "app/src/main/jniLibs/arm64-v8a/libffprobe.so" }
]